# jepa-collapse-lab

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
configs/: cifar10_debug.yaml  stl10.yaml
results/: results_table.md
results/checkpoints_long/cifar10_naive/: history.json  probe_h.json  probe_z.json
results/figures/cifar10_naive_long/: z_summary.json
results/figures/stl10_barlow_twins/: z_summary.json
results/figures/stl10_naive/: z_summary.json
results/figures/stl10_vicreg/: z_summary.json
scripts/: diagnose.py  probe.py  train.py  visualize_pairs.py
src/jepa_collapse_lab/: __init__.py  config.py  trainer.py  utils.py
src/jepa_collapse_lab/data/: __init__.py  augmentations.py  loaders.py
src/jepa_collapse_lab/diagnostics/: __init__.py  collect.py  metrics.py  plots.py
src/jepa_collapse_lab/eval/: __init__.py  linear_probe.py
src/jepa_collapse_lab/losses/: __init__.py  ssl_losses.py
src/jepa_collapse_lab/models/: __init__.py  backbone.py  encoder.py  projector.py
tests/: test_data.py  test_diagnostics.py  test_eval.py  test_losses.py  test_models.py  test_trainer.py
