[project]
name = "jepa-collapse-lab"
version = "0.1.0"
description = "Why do joint-embedding models collapse — and how do Barlow Twins and VICReg prevent it?"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "einops>=0.7",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jepa_collapse_lab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
